crates/ddlog-syntax/tests/validation/fail/relation_with_input_and_output.dl
// kind:item validate:true
input output relation Foo()
